Current state of the art for the event system now works

--- a/Config/Tags/GorgeousTags.ini
+++ b/Config/Tags/GorgeousTags.ini
@@ -21,10 +21,13 @@ GameplayTagList=(Tag="GT.Events.Construction.Queue.Validation.Applied",DevCommen
 GameplayTagList=(Tag="GT.Events.Construction.Queue.Validation.Finished",DevComment="")
 
 GameplayTagList=(Tag="GT.Events.Managing.RegisterEvent.NotRegistered",DevComment="")
+GameplayTagList=(Tag="GT.Events.Managing.RegisterEvent.Against_Check",DevComment="")
 GameplayTagList=(Tag="GT.Events.Managing.RegisterEvent.ExecutionNotAllowed",DevComment="")
 GameplayTagList=(Tag="GT.Events.Managing.RegisterEvent.Unique",DevComment="")
 GameplayTagList=(Tag="GT.Events.Managing.RegisterEvent.EvaluationCompleted",DevComment="")
 GameplayTagList=(Tag="GT.Events.Managing.RegisterEvent.Success",DevComment="")
+
+GameplayTagList=(Tag="GT.Events.Managing.UnregisterEvent.Voided_Instead",DevComment="")
 
 GameplayTagList=(Tag="GT.Events.Managing.LoadEvent.Attempt",DevComment="")
 GameplayTagList=(Tag="GT.Events.Managing.LoadEvent.StartAsync",DevComment="")
