Implement Voiding System & Class-space data sharing

--- a/Config/Tags/GorgeousTags.ini
+++ b/Config/Tags/GorgeousTags.ini
@@ -35,6 +35,9 @@ GameplayTagList=(Tag="GT.Events.Managing.LoadEvent.Success",DevComment="")
 GameplayTagList=(Tag="GT.Events.Managing.LoadEvent.Failure",DevComment="")
 GameplayTagList=(Tag="GT.Events.Managing.LoadEvent.Invalid",DevComment="")
 
+GameplayTagList=(Tag="GT.Events.Voiding.Resolved",DevComment="")
+GameplayTagList=(Tag="GT.Events.Voiding.Default_Implementation",DevComment="")
+
 GameplayTagList=(Tag="GT.Events.GIS.Interface.Not_Valid",DevComment="")
 GameplayTagList=(Tag="GT.Events.GIS.Interface.Not_Registered",DevComment="")
 GameplayTagList=(Tag="GT.Events.GIS.Interface.Already_Registered",DevComment="")
