Implement Event Overlap Triggers

--- a/Config/Tags/GorgeousTags.ini
+++ b/Config/Tags/GorgeousTags.ini
@@ -41,3 +41,7 @@ GameplayTagList=(Tag="GT.Events.Voiding.Default_Implementation",DevComment="")
 GameplayTagList=(Tag="GT.Events.GIS.Interface.Not_Valid",DevComment="")
 GameplayTagList=(Tag="GT.Events.GIS.Interface.Not_Registered",DevComment="")
 GameplayTagList=(Tag="GT.Events.GIS.Interface.Already_Registered",DevComment="")
+
+GameplayTagList=(Tag="GT.Events.Trigger.Invalid_Type_Match",DevComment="")
+GameplayTagList=(Tag="GT.Events.Trigger.Not_Eligible",DevComment="")
+GameplayTagList=(Tag="GT.Events.Trigger.Cooldown",DevComment="")
