Add sub event functionality

--- a/Config/Tags/GorgeousTags.ini
+++ b/Config/Tags/GorgeousTags.ini
@@ -4,11 +4,11 @@ GameplayTagList=(Tag="GT.Events.Global",DevComment="")
 GameplayTagList=(Tag="GT.Events.Construction.Queue.Queued",DevComment="")
 GameplayTagList=(Tag="GT.Events.Construction.Queue.Successful",DevComment="")
 GameplayTagList=(Tag="GT.Events.Construction.Queue.Failed",DevComment="")
-GameplayTagList=(Tag="GT.Events.Construction.Queue.AlreadyInQueue",DevComment="")
+GameplayTagList=(Tag="GT.Events.Construction.Queue.Already_In_Queue",DevComment="")
 GameplayTagList=(Tag="GT.Events.Construction.Queue.Canceled",DevComment="")
-GameplayTagList=(Tag="GT.Events.Construction.Queue.NotInQueue",DevComment="")
-GameplayTagList=(Tag="GT.Events.Construction.Queue.InvalidHandle",DevComment="")
-GameplayTagList=(Tag="GT.Events.Construction.Queue.RemovedHandle",DevComment="")
+GameplayTagList=(Tag="GT.Events.Construction.Queue.Not_In_Queue",DevComment="")
+GameplayTagList=(Tag="GT.Events.Construction.Queue.Invalid_Handle",DevComment="")
+GameplayTagList=(Tag="GT.Events.Construction.Queue.Removed_Handle",DevComment="")
 
 GameplayTagList=(Tag="GT.Events.Construction.Queue.Validation.Start",DevComment="")
 GameplayTagList=(Tag="GT.Events.Construction.Queue.Validation.Valid",DevComment="")
@@ -17,17 +17,17 @@ GameplayTagList=(Tag="GT.Events.Construction.Queue.Validation.Removed",DevCommen
 GameplayTagList=(Tag="GT.Events.Construction.Queue.Validation.Applied",DevComment="")
 GameplayTagList=(Tag="GT.Events.Construction.Queue.Validation.Finished",DevComment="")
 
-GameplayTagList=(Tag="GT.Events.Managing.RegisterEvent.NotRegistered",DevComment="")
+GameplayTagList=(Tag="GT.Events.Managing.RegisterEvent.Not_Registered",DevComment="")
 GameplayTagList=(Tag="GT.Events.Managing.RegisterEvent.Against_Check",DevComment="")
-GameplayTagList=(Tag="GT.Events.Managing.RegisterEvent.ExecutionNotAllowed",DevComment="")
+GameplayTagList=(Tag="GT.Events.Managing.RegisterEvent.Execution_Not_Allowed",DevComment="")
 GameplayTagList=(Tag="GT.Events.Managing.RegisterEvent.Unique",DevComment="")
-GameplayTagList=(Tag="GT.Events.Managing.RegisterEvent.EvaluationCompleted",DevComment="")
+GameplayTagList=(Tag="GT.Events.Managing.RegisterEvent.Evaluation_Completed",DevComment="")
 GameplayTagList=(Tag="GT.Events.Managing.RegisterEvent.Success",DevComment="")
 
 GameplayTagList=(Tag="GT.Events.Managing.UnregisterEvent.Voided_Instead",DevComment="")
 
 GameplayTagList=(Tag="GT.Events.Managing.LoadEvent.Attempt",DevComment="")
-GameplayTagList=(Tag="GT.Events.Managing.LoadEvent.StartAsync",DevComment="")
+GameplayTagList=(Tag="GT.Events.Managing.LoadEvent.Start_Async",DevComment="")
 GameplayTagList=(Tag="GT.Events.Managing.LoadEvent.Success",DevComment="")
 GameplayTagList=(Tag="GT.Events.Managing.LoadEvent.Failure",DevComment="")
 GameplayTagList=(Tag="GT.Events.Managing.LoadEvent.Invalid",DevComment="")
